eks/httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin-online
  namespace: httpbin
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-cc3cce84,subnet-c0ebc79b,subnet-122bee39
    alb.ingress.kubernetes.io/tags: Environment=jobs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/security-groups: sg-04xxxx1776fa8a371
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: httpbin
              servicePort: 80
